--- a/Android/FamilyParking/app/src/main/res/layout/fragment_signin.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/fragment_signin.xml
@@ -90,7 +90,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
-        android:clickable="true">
+        android:clickable="true"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/social_b"
