--- a/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
+++ b/iOS/FamilyParking/familyparking/Base.lproj/Main.storyboard
@@ -733,7 +733,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Targa" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8CB-Ve-Nha">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number Plate" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8CB-Ve-Nha">
                                 <rect key="frame" x="54" y="169" width="212" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="212" id="r7b-3E-Cmp"/>
